--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,8 @@
     <body>
          <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/me.jpg">
+        <p>This site was created by me and use data from weatherstack and from Mapbox sites</p>
+        <img class="portrait" src="/img/me.jpg">        
         </div>
         {{>footer}}
     </body>
